CODING PAAST TIME... fixing the email button. not fitting on smaller screens

--- a/style.css
+++ b/style.css
@@ -350,9 +350,9 @@ p{
   background: black;
   color: white;
   padding: 10px;
-  letter-spacing: 3px;
+  letter-spacing: 2px;
   text-decoration: none;
-  font-size: 18px;
+  font-size: 17px;
   border-radius: 6px;
   box-sizing: border-box;
   transition: all 600ms ease; 
